# PP-Final-Project

./: .dockerignore  CMakeLists.txt  CMakeLists_headless.txt  Dockerfile  README_headless.md  bench_block_size.sh  benchmark.sh  docker-compose.yml  test_cuda.sh
report/: grid_size.txt  plot_benchmark.py  plot_cpu_vs_cuda.py  plot_grid_size.py
src/controllers/: cli.cpp  cli.hpp  game.cpp  game.hpp
src/models/: grid.cpp  grid.hpp  space.hpp
src/view/: color.cpp  color.hpp  view.cpp  view.hpp
src_headless/common/: config.hpp  types.hpp
src_headless/cpu/: ant_simulation_cpu  main.cpp
src_headless/cuda/: config_cuda.cuh  main.cu
src_headless/openmp/: ant_simulation_openmp  main.cpp
src_visualization/: CMakeLists.txt  Dockerfile  README.md  color.hpp  config.hpp  docker-compose.yml  main.cpp  types.hpp
